--- a/p2-springboot-config/pom.xml
+++ b/p2-springboot-config/pom.xml
@@ -25,11 +25,11 @@
         </dependency>
 
         <!-- 不引入该依赖：spring boot Configuration Annotation Proessor not found in classpath -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
