--- a/p7-springboot-mybatis/pom.xml
+++ b/p7-springboot-mybatis/pom.xml
@@ -68,8 +68,8 @@
         <!--druid连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.29</version>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
         </dependency>
 
         <!--jdbc依赖-->
