--- a/p35-springboot-requestAndResponse/pom.xml
+++ b/p35-springboot-requestAndResponse/pom.xml
@@ -48,6 +48,17 @@
 			<version>1.2.47</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.wangyin.concrete</groupId>
+			<artifactId>concrete-spring</artifactId>
+			<version>1.1.14</version>
+		</dependency>
+
 
 	</dependencies>
 
